# my-greenbook-solutions

./: Cargo.toml  Makefile  README.md
src/: p1.rs  p2.rs
week1/: Cargo.toml  README.md
week1/src/: p1.rs  p2.rs
week2/: Cargo.toml  README.md
week2/src/: p1.rs  p1ext.rs  p2.rs  p3.rs
week3/: Cargo.toml  README.md
week3/src/: main.rs  p1.rs
