[package]
name = "week2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "p1"
path = "src/p1.rs"

[[bin]]
name = "p1ext"
path = "src/p1ext.rs"

[[bin]]
name = "p2"
path = "src/p2.rs"

[[bin]]
name = "p3"
path = "src/p3.rs"

[dependencies]
rand = "0.8.5" # Random number generators and other randomness functionality.
